# chem-war

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  info.txt
src/: character.cpp  character.h  components.cpp  components.h  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp
src/lib/: allocator.hpp  animation.cpp  animation.h  audio.cpp  audio.h  camera.cpp  camera.h  components.cpp  components.h  consts.h  drefl.h  ecs.h  effects.cpp  effects.h  fake3d.cpp  fake3d.h  input.cpp  input.h  log.cpp  log.h  object.cpp  object.h  particle.cpp  particle.h  pool.hpp  refl_common.h  render.cpp  render.h  resource.cpp  resource.h  scene.cpp  scene.h  srefl.h  tile.cpp  tile.h  utils.cpp  utils.hpp
src/lib/plugins/: profiler.hpp  yanui.h  yanui_backend_sdl2.c  yanui_backend_sdl2.h
src/preset/: controller.cpp  controller.h  gui.cpp  gui.h  jumping_text.cpp  jumping_text.h  tracer.cpp  tracer.h
src/sandbox/: character.cpp  character.h  enemy.h  engine.h  game.cpp  game.h  main.cpp
src/ui/: bar.cpp  bar.h  button.cpp  button.h  debug_panel.cpp  debug_panel.h  label.cpp  label.h  panel.cpp  panel.h
